# storylet-framework

./: .gitignore  LICENSE  README.md  TODO.txt  package-lock.json  package.json  storylet-framework.code-workspace  storylet-framework.sln
cpp/: CMakeLists.txt  package-lock.json  package.json
cpp/include/storylet_framework/: context.h  expression.h  json_loader.h  json_utils.h  storylets.h  utils.h
cpp/lib/expression-parser/: README.md
cpp/lib/expression-parser/include/expression_parser/: expression.h  parser.h  writer.h
cpp/lib/expression-parser/src/: expression.cpp  parser.cpp  writer.cpp
cpp/src/: context.cpp  expression.cpp  json_loader.cpp  json_utils.cpp  storylets.cpp
cpp/test/: test_parser.cpp  test_storylets.cpp  test_utils.cpp  test_utils.h  test_writer.cpp
csharp/: package-lock.json  package.json
csharp/StoryletFramework/: Context.cs  Expression.cs  JsonHelpers.cs  JsonLoader.cs  Parser.cs  StoryletFramework.csproj  Storylets.cs  Utils.cs  Writer.cs
csharp/StoryletFramework.Tests/: ParserTest.cs  StoryletFramework.Tests.csproj  StoryletsTest.cs  TestUtils.cs  WriterTest.cs
csharp/lib/expression-parser/: README.md
javascript/: package-lock.json  package.json  rollup.config.js
javascript/lib/expression-parser/: expressionParser.js  expressionParser.js.map  expressionParser.min.js  expressionParser.min.js.map
javascript/src/: context.js  jsonLoader.js  storyletFramework.js  storylets.js  utils.js
javascript/test/: storylets.test.js  testUtils.js
python/: create_dist.py  package-lock.json  package.json
python/lib/expression-parser/expression_parser/: expression.py
python/src/expression_parser/: expression.py  parser.py  writer.py
python/src/storylet_framework/: __init__.py  context.py  json_loader.py  storylets.py  utils.py
python/tests/: test_parser.py  test_storylets.py  test_utils.py  test_writer.py
tests/: Barks.jsonc  Encounters.json  Encounters.jsonc  Parse-Output.txt  Parse.txt  Streets.json  Streets.jsonc  Writer-Output.txt  Writer.txt
